Add tests for 2018 day 12 & 13